# CIS-194-2013

./: .gitignore  README.md
hw1/: hw1.cabal
hw1/Hanoi/: .gitignore  hanoi.cabal
hw1/Hanoi/src/: Hanoi.hs  HanoiTest.hs  TestHanoi.hs
hw1/ValidatingCreditCards/: ValidatingCreditCards.cabal
hw1/ValidatingCreditCards/src/: TestValidatingCreditCardNumbers.hs  ValidatingCreditCardNumbers.hs  ValidatingCreditCardNumbersTest.hs
hw1/src/: ValidatingCreditCardNumbers.hs  ValidatingCreditCardNumbersTest.hs
hw2/: LogAnalysis.hs
hw3/: Golf.hs
hw4/: hw4-ex1.hs  hw4-ex2.hs  hw4-ex3.hs  hw4-ex4.hs  hw4.hs
hw5/: ex2.hs
